--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,23 +63,34 @@ body {
   font-weight: 700;
   font-size: 1rem;
   cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+  }
 }
 
 .dice {
   background-color: #fff;
+  color: #2b283a;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: Karla;
   font-weight: bold;
   font-size: 1.25rem;
-  color: #2b283a;
-  padding: 5px 10.5px;
+  // padding: 5px 10.5px;
+  height: 2rem;
+  width: 2rem;
   cursor: pointer;
+
+  &.selected {
+    background-color: #59e391;
+  }
 }
 
-.selected {
-  background-color: #59e391;
-}
 .dice-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
