--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,9 @@
   }
 }
 
+:root {
+  font-size: 16.5px;
+}
 $mainText: #2b283a;
 
 body {
@@ -23,11 +26,12 @@ body {
 }
 
 .main {
-  width: 320px;
-  height: 320px;
-  padding: 34px;
+  width: 20rem;
+  height: 20rem;
+  padding: 2rem;
   font-family: Karla, sans-serif;
   display: flex;
+  gap: 5px;
   flex-direction: column;
   align-items: center;
   background-color: #f5f5f5;
@@ -35,7 +39,8 @@ body {
 }
 
 .main > h1 {
-  font-size: 26px;
+  font-size: 1.75rem;
+  // margin-bottom: 5px;
   font-weight: 700;
   letter-spacing: -0.03em;
   color: $mainText;
@@ -82,8 +87,8 @@ body {
   font-weight: bold;
   font-size: 1.25rem;
   // padding: 5px 10.5px;
-  height: 2rem;
-  width: 2rem;
+  height: 2.1rem;
+  width: 2.1rem;
   cursor: pointer;
 
   &.selected {
@@ -96,4 +101,5 @@ body {
   grid-template-columns: repeat(5, 1fr);
   gap: 18px;
   padding: 24px;
+  // margin-bottom: 5px;
 }
