--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 }
 
 :root {
-  font-size: 16.5px;
+  font-size: 20px;
 }
 $mainText: #2b283a;
 
@@ -27,13 +27,14 @@ body {
 
 .main {
   width: 20rem;
-  height: 20rem;
+  height: 19rem;
   padding: 2rem;
   font-family: Karla, sans-serif;
   display: flex;
-  gap: 5px;
   flex-direction: column;
   align-items: center;
+  // justify-content: space-around;
+  gap: 5px;
   background-color: #f5f5f5;
   border-radius: 5px;
 }
