--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,7 @@ body {
   bottom: 5px;
   left: 5px;
   font-size: 0.7rem;
+  // font-weight: 600;
   align-self: flex-start;
   margin-left: -30px;
 }
