--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,8 +44,8 @@ body {
 .main {
   position: absolute;
   top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   // centering ☝️
 
   max-height: 450px;
@@ -101,10 +101,6 @@ body {
   }
 }
 
-.root {
-  height: 100vh;
-}
-
 .dice {
   background-color: #fff;
   color: #2b283a;
@@ -121,7 +117,7 @@ body {
     background-color: #59e391;
   }
 
-  @media screen and (max-width:500px) {
+  @media screen and (max-width: 500px) {
     height: 2.2rem;
     width: 2.2rem;
   }
@@ -146,10 +142,26 @@ body {
   margin-left: -30px;
 }
 
-.stopwatch {
-  font-size: 50px;
+.dot-grid {
+  display: grid;
+  grid-template: repeat(3, max-content) / repeat(3, max-content);
+  place-content: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  height: 2.1rem;
+  width: 2.1rem;
+  gap: 1.5px;
 }
 
-.time-dif {
-  color: hsla(118, 75%, 50%, 0.856);
+.dot {
+  display: inline-block;
+  background-color: #000;
+
+  height: 8.5px;
+  width: 8.5px;
+  border-radius: 50%;
+  &.selected {
+    background-color: #fff;
+  }
 }
